# weather_station

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  configure.sh  modbus.cmake  workspace.code-workspace
include/: InputRegMap.h  InputRegisters.h  MeasuringValues.h  TestClass.h  WeatherStation.h
lib/: CMakeLists.txt  InputRegisters.h  MeasuringValues.cpp  MeasuringValues.h  TestClass.cpp  WeatherStation.cpp  WeatherStation.h  WsFeatures.cpp  WsFeatures.h
src/: CMakeLists.txt  MeasuringValues.cpp  WeatherStation.cpp
test/: CMakeLists.txt  MeasuringValuesTest.cpp  SimpleTest.cpp  a.out  main.cpp  modbuslib  modbuslib.cpp  modbuslib_test.cpp  modbuslibpp_test.cpp  read-input-registers  simple_test.cpp  wsfeatures_class_test.cpp
